# ONI-MODS

./: Directory.props  Directory.targets  ONI-Mods.sln  mod.yaml  pyproject.toml  temp_config.json
DuplicantAgent/: DuplicantAgent.csproj  DuplicantAgentMod.cs  DuplicantAgentOptions.cs  DuplicantAgentString.cs  mod.yaml
PLib/: README.md
PLib/FastTrack/: FastTrack.csproj
src/oni_mods/cli/: __main__.py
