[project]
name = "oni_mods"
version = "0.1.0"
description = "mods for Oxygen Not Included"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
]

[project.scripts]
oni-mods = "oni_mods.cli.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/*"]
